# gdock-wasm

./: Cargo.toml  README.md  build.js
src/: chromosome.rs  clustering.rs  constants.rs  fitness.rs  ga.rs  hall_of_fame.rs  lib.rs  population.rs  restraints.rs  structure.rs  toppar.rs
