[package]
name = "gdock-wasm"
version = "0.2.0"
edition = "2021"
license = "0BSD"
authors = ["Rodrigo V. Honorato <rvhonorato@protonmail.com>"]
description = "WebAssembly bindings for gdock score pipeline"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
console_error_panic_hook = { version = "0.1", optional = true }
rand = { version = "0.8.5", features = ["std"] }
rand_distr = "0.4"
getrandom = { version = "0.2", features = ["js"] }
serde_json = "1"

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
